[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "x86_64-apple-darwin"

[dependencies]
mysql = "24.0.0"
anyhow = "1.0.75"
ipfs-api = "0.17.0"
tokio = {version = "1.35.0", features=["macros", "rt-multi-thread"]}
serde_json = "1.0.108"
json = "0.12.4"
sha256 = "1.4.0"
